1998-04-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* calobj.c (ical_object_create_from_vobject): Fixed alarm loading;
	Load snooze time and snooze count

1998-04-23  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* calendar.c (calendar_save): Actually save the to-do entries.

	* gncal-todo.c (simple_todo_editor): Now you can add and edit
	to-do entries.

1998-04-22  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gncal-full-day.c: Made it use popup_menu().

	* popup-menu.c: New file with utility functions for creating popup
	menus.  Maybe such a thing would be useful in libgnomeui, a la
	gnome-app-helper?

	* Makefile.am (gnomecal_SOURCES): Added popup-menu.[ch] to the sources.

1998-04-22  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* prop.c (properties): Added Calendar properties editor.
	(properties): Make the code use a propery box.

	* main.c: Save/load properties (fix to old commit).

1998-04-21  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gncal-todo.c: New widget for editing TODO lists.  This will be
	worked on a lot.

	* Makefile.am (gnomecal_SOURCES): Added gncal-todo.[ch] to the sources.

	* gncal-day-panel.c: Make it use the new TODO widget.

1998-04-21  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* timeutil.c (isodate_from_time_t): Do not save with the global
	time flag (Z at the end of the isodate).  When we figure out a way
	to load times in GMT time, we will add this back 

	* view-utils.c (popup_menu): Moved this routine here as there are
	more users of this code. 

	* gncal-day-view.c (gncal_day_view_class_init): Add button press
	handler. 
	(new_appointment): New routine for creating appointments on a day.

	

	* main.c (save_ok): Added call to gtk_window_set_wmclass.

	* gncal-day-panel.c (calendar_day_selected): Fix, years for mktime
	should substract 1900 and gtk_calendar stores years relative to
	year 0. 

	* gncal-week-view.c (gncal_week_view_new): Make the week view